<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".details.TvShowDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/purple_dark_500"
            app:expandedTitleMarginEnd="20dp"
            app:expandedTitleMarginStart="15dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/img_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:fitsSystemWindows="true"
                android:scaleType="center"
                tools:src="@tools:sample/backgrounds/scenic" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_title" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:menu="@menu/menu_details"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="8"
                tools:listitem="@layout/item_genre" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_poster_container"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/purple_200"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_genres">

                <ImageView
                    android:id="@+id/img_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/backgrounds/scenic" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                app:layout_constraintBottom_toTopOf="@id/rb_vote_average"
                app:layout_constraintEnd_toEndOf="@id/rb_vote_average"
                app:layout_constraintStart_toStartOf="@id/tv_ratings"
                tools:text="@tools:sample/full_names" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/rb_vote_average"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="0.1"
                app:layout_constraintBottom_toTopOf="@id/tv_grade_now"
                app:layout_constraintEnd_toEndOf="@id/tv_grade_now"
                app:layout_constraintStart_toStartOf="@id/tv_grade_now" />

            <TextView
                android:id="@+id/tv_rating_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/purple_200"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/tv_ratings"
                app:layout_constraintEnd_toEndOf="@id/tv_ratings"
                app:layout_constraintStart_toStartOf="@id/tv_ratings"
                app:layout_constraintTop_toTopOf="@id/rb_vote_average"
                tools:text="8.5" />

            <TextView
                android:id="@+id/tv_ratings"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/ratings"
                app:layout_constraintBottom_toTopOf="@id/tv_vote"
                app:layout_constraintStart_toStartOf="@id/tv_vote" />

            <TextView
                android:id="@+id/tv_grade_now"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/grade_now"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@id/tv_ratings"
                app:layout_constraintEnd_toEndOf="@id/tv_vote_info"
                app:layout_constraintStart_toEndOf="@id/tv_ratings" />


            <TextView
                android:id="@+id/tv_vote"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/vote"
                app:layout_constraintBottom_toTopOf="@id/tv_status"
                app:layout_constraintStart_toStartOf="@id/tv_status" />

            <TextView
                android:id="@+id/tv_vote_info"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="@id/tv_vote"
                app:layout_constraintEnd_toEndOf="@id/tv_first_air_date_info"
                app:layout_constraintStart_toEndOf="@id/tv_vote"
                tools:text="@tools:sample/us_zipcodes" />

            <TextView
                android:id="@+id/tv_status"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/status"
                app:layout_constraintBottom_toTopOf="@id/tv_popularity"
                app:layout_constraintStart_toStartOf="@id/tv_popularity" />

            <TextView
                android:id="@+id/tv_status_info"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="@id/tv_status"
                app:layout_constraintEnd_toEndOf="@id/tv_popularity_info"
                app:layout_constraintStart_toEndOf="@id/tv_status"
                tools:text="Released" />

            <TextView
                android:id="@+id/tv_popularity"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/popularity"
                app:layout_constraintBottom_toTopOf="@id/tv_first_air_date"
                app:layout_constraintStart_toStartOf="@id/tv_first_air_date" />

            <TextView
                android:id="@+id/tv_popularity_info"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="@id/tv_popularity"
                app:layout_constraintEnd_toEndOf="@id/tv_first_air_date_info"
                app:layout_constraintStart_toEndOf="@id/tv_popularity"
                tools:text="@tools:sample/us_zipcodes" />

            <TextView
                android:id="@+id/tv_first_air_date"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/first_air_date"
                app:layout_constraintBottom_toBottomOf="@id/cv_poster_container"
                app:layout_constraintStart_toEndOf="@id/cv_poster_container" />

            <TextView
                android:id="@+id/tv_first_air_date_info"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="@id/tv_first_air_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_first_air_date"
                tools:text="@tools:sample/date/ddmmyy" />

            <TextView
                android:id="@+id/story_line"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/story_line"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/tv_first_air_date_info"
                app:layout_constraintStart_toStartOf="@id/cv_poster_container"
                app:layout_constraintTop_toBottomOf="@id/cv_poster_container" />

            <TextView
                android:id="@+id/tv_overview"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@id/story_line"
                app:layout_constraintStart_toStartOf="@id/story_line"
                app:layout_constraintTop_toBottomOf="@id/story_line"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/tv_creators"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/creators"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/tv_overview"
                app:layout_constraintStart_toStartOf="@id/tv_overview"
                app:layout_constraintTop_toBottomOf="@id/tv_overview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_creators"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_creators"
                tools:itemCount="8"
                tools:listitem="@layout/item_creator" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/purple_200"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:backgroundTint="@color/purple_200"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|end|right"
        app:maxImageSize="20dp"
        app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>