<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_movies"
        android:icon="@drawable/ic_baseline_movie_24"
        android:title="@string/movies" />
    <item
        android:id="@+id/item_tv_shows"
        android:icon="@drawable/ic_baseline_live_tv_24"
        android:title="@string/tv_shows" />
    <item
        android:id="@+id/item_trending"
        android:icon="@drawable/ic_baseline_trending_up_24"
        android:title="@string/trending" />
</menu>