...
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/backgrounds/scenic" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                app:layout_constraintBottom_toTopOf="@id/rb_vote_average"
...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="@id/tv_vote"
                app:layout_constraintEnd_toEndOf="@id/tv_release_date_info"
                app:layout_constraintStart_toEndOf="@id/tv_vote"
                tools:text="@tools:sample/us_zipcodes" />

            <TextView
                android:id="@+id/tv_status"
                style="@style/TextAppearance.MaterialComponents.Body2"
...
