<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_favorites"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorites"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_setting"
        app:showAsAction="ifRoom" />
</menu>